Showing posts table in admin panel with DataTables including translations to spanish

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,3 +10,6 @@
 // Bootstrap
 // Already imported by AdminLTE
 //@import '~bootstrap/scss/bootstrap';
+
+// DataTables.js css
+@import '~datatables.net-bs4/css/dataTables.bootstrap4.css';
