--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,3 +13,7 @@
 
 // DataTables.js css
 @import '~datatables.net-bs4/css/dataTables.bootstrap4.css';
+
+.card-header::after {
+    display: none;
+}
