--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36826,5 +36826,7 @@ div.table-responsive > div.dataTables_wrapper > div.row > div[class^="col-"]:fir
 div.table-responsive > div.dataTables_wrapper > div.row > div[class^="col-"]:last-child {
   padding-right: 0;
 }
-
+.card-header::after {
+  display: none;
+}
 
