--- a/public/css/style.css
+++ b/public/css/style.css
@@ -283,6 +283,21 @@ a.btn-bar{
     margin-right: 10px;
 }
 
+.overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    color: white;
+    font-size: 30px;
+    background-color: rgba(0,0,0,.7);
+}
+ .gallery-photos {
+     overflow: hidden;
+ }
+
 
 
 
