--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,7 @@ header nav li a:hover{
 	position: relative;
 	padding: 65px 100px;
 }
+
 .post .category{
 	background: #1abc9c;
 	padding: 5px 10px;
@@ -321,6 +322,10 @@ a.btn-bar{
 
 .gallery-photos {
     overflow: hidden;
+}
+
+.carousel {
+    margin: 0 -15px;
 }
 
 
