Add form to update roles for a user

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36834,3 +36834,7 @@ div.table-responsive > div.dataTables_wrapper > div.row > div[class^="col-"]:las
   position: absolute;
 }
 
+.custom-control.custom-checkbox label.custom-control-label {
+  font-weight: 400;
+}
+
