--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,3 +21,7 @@
 .btn-close {
     position: absolute;
 }
+
+.custom-control.custom-checkbox label.custom-control-label {
+    font-weight: 400;
+}
