Copy CKEditor 4 from CDN to local

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36621,7 +36621,8 @@ a.text-muted:hover {
 
 [class*="accent-"] a.btn-dark {
   color: #ffffff;
-}table.dataTable {
+}
+/*# sourceMappingURL=adminlte.css.map */table.dataTable {
   clear: both;
   margin-top: 6px !important;
   margin-bottom: 6px !important;
